mobius/eos/access/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app:  eosaccess
  name:  eosaccess
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: eosaccess
